Configured findbug at compiling time